Add materialized view for most active players by day; consumer infrastructure
